<resources>
    <string name="app_name">БЖД билеты</string>
    <string name="title_activity_scoreboard">ScoreboardActivity</string>
    <string name="scoreboard_header">Онлайн табло</string>
    <string name="path">Путь</string>
    <string name="platform">Платформа</string>
    <string name="destinationStation">Прибытие</string>
    <string name="departureStation">Отправление</string>
    <string name="scoreboard_detail_title">Scoreboard detail</string>
    <string name="add_to_notification">Добавить в центр уведомлений</string>
    <string name="travel_time">Время в пути</string>
    <string name="stay">Стоянка</string>
    <string name="route_not_founded">Маршрут не найден. Проверьте введенные данные</string>
    <string name="title_activity_train_routes">TrainRoutesActivity</string>
    <string name="error_parsing_page">Произошла ошибка парсинга страницы.</string>
    <string name="error_connect">Отсутствует подключение к интернету.</string>
    <string name="title_activity_shell">ShellActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="tab_1">Green</string>
    <string name="tab_2">Red</string>
    <string name="tab_3">Blue</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_required_departure">Станция отправления обязательна для заполнения</string>
    <string name="error_required_destination">Станция назначения обязательна для заполнения</string>
    <string name="error_required_date">Дата отправления обязательна для заполнения</string>
    <string name="title_activity_test">testActivity</string>
    <string name="title_activity_place_info">PlaceInfoActivity</string>
    <string name="departure">Отправление</string>
    <string name="arrival">Прибытие</string>
    <string name="travelTime">Время в пути</string>
    <string name="train_list_not_founded">Список поездов для данного маршрута не найден.</string>
    <string name="input_station_name">Введите название станции</string>
    <string name="train_route">Маршрут поезда</string>
    <string name="clear_history">очистить историю</string>
    <string name="route_list_history_empty">Список истории запросов пуст</string>
    <string name="title_activity_settings">Settings</string>
    <string name="error_detalization_places">Информация по детализации мест недоступна для этого поезда.</string>
    <string name="push_content">Путь: %1$s, Платформа: %2$s, Маршрут: %3$s</string>
    <string name="list_empty">список пуст</string>
    <string name="passenger_route">Маршрут следования пассажира</string>
    <string name="ticket_not">Билетов нет</string>
    <string name="e_r">ЭР</string>
    <string name="c_t">ФП</string>
    <string name="f_t">СП</string>
    <string name="news">Новости</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="time_format">HH:mm</string>
    <string name="free_places">Свободные места</string>
    <string name="search">Найти</string>

</resources>
