<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

        <TextView
                android:id="@+id/route"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:textSize="@dimen/text_size_medium"
                android:textAlignment="center" />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/arrival"
                        style="@style/HeaderTextView" />

                <TextView
                        android:id="@+id/arrival"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/BodyTextView" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/arrive"
                        style="@style/HeaderTextView" />

                <TextView
                        android:id="@+id/arrive"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/BodyTextView" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/travel_time"
                        style="@style/HeaderTextView" />

                <TextView
                        android:id="@+id/travelTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/BodyTextView" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="2">

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/stay"
                        style="@style/HeaderTextView" />

                <TextView
                        android:id="@+id/stay"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/BodyTextView" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>