<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="by.client.android.railwayapp.ui.traintimetable.PlaceInfoActivity">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/main.appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/main.collapsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|snap"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp">

                <LinearLayout
                        android:id="@+id/headerLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        style="@style/PageHeaderStyle">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_gravity="center"
                                android:layout_weight="7">

                            <ImageView
                                    android:id="@+id/iconImageView"
                                    style="@style/ImageHeader" />

                            <TextView
                                    android:id="@+id/trainIdTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textAlignment="center"
                                    android:textSize="@dimen/text_size_micro"
                                    android:textColor="@color/tint_default" />

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1"
                                android:layout_marginStart="4dp">

                            <TextView
                                    android:id="@+id/pathTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/text_size_medium"
                                    android:textColor="@color/white_text" />

                            <TextView
                                    android:id="@+id/typeTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textSize="@dimen/text_size_micro"
                                    android:textColor="@color/tint_default" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="@dimen/header_margin_top"
                            android:layout_marginBottom="@dimen/header_margin_bottom">

                        <TextView
                                android:text="@string/passenger_route"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextViewHeader" />

                        <TextView
                                android:id="@+id/passengerRouteTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextViewBody" />

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1">

                            <TextView
                                    android:text="@string/departure"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextViewHeader" />

                            <TextView
                                    android:id="@+id/departureTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextViewBody" />

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="1">

                            <TextView
                                    android:text="@string/arrival"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextViewHeader" />

                            <TextView
                                    android:id="@+id/arrivalTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    style="@style/TextViewBody" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_marginTop="@dimen/content_margin_top">

                        <TextView
                                android:text="@string/travelTime"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextViewHeader" />

                        <TextView
                                android:id="@+id/travelTimeTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                style="@style/TextViewBody" />

                    </LinearLayout>

                </LinearLayout>

            </FrameLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
            android:id="@+id/tariffsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

</android.support.design.widget.CoordinatorLayout>
