<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/widget_margin">

   <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

       <LinearLayout
               android:id="@+id/trainInfo"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical"
               android:background="@drawable/border"
               android:padding="6dp">

           <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="horizontal"
                   android:layout_marginTop="@dimen/content_margin_top"
                   android:layout_marginBottom="@dimen/content_margin_bottom">

               <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_weight="7">

                   <ImageView
                           android:id="@+id/icoImageView"
                           android:layout_width="@dimen/image_size_large"
                           android:layout_height="@dimen/image_size_large"
                           android:textAlignment="center"
                           android:layout_gravity="center"
                           android:layout_marginStart="@dimen/content_margin_start"
                           android:layout_margin="4dp" />

                   <TextView
                           android:id="@+id/trainIdTextView"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:textAlignment="center"
                           android:textSize="@dimen/text_size_micro"
                           android:textColor="@color/white_text" />

               </LinearLayout>

               <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="vertical"
                       android:layout_weight="1"
                       android:layout_marginStart="4dp"
                       android:layout_gravity="center">

                   <TextView
                           android:id="@+id/pathTextView"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:textSize="@dimen/text_size_medium"
                           android:textColor="@color/white_text" />

                   <TextView
                           android:id="@+id/trainTypeTextView"
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:textSize="@dimen/text_size_micro"
                           android:textColor="@color/white_text" />

               </LinearLayout>

           </LinearLayout>

           <include layout="@layout/default_divider" />

           <LinearLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:orientation="vertical"
                   android:gravity="center">

               <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:layout_marginTop="@dimen/content_margin_top">

                   <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1">

                       <TextView
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/destinationStation"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_small"
                               android:textColor="@color/white_text" />

                       <TextView
                               android:id="@+id/startTimeTextView"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_large"
                               android:textColor="@color/white_text" />

                   </LinearLayout>

                   <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1">

                       <TextView
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/departureStation"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_small"
                               android:textColor="@color/white_text" />

                       <TextView
                               android:id="@+id/endTimeTextView"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_large"
                               android:textColor="@color/white_text" />

                   </LinearLayout>

               </LinearLayout>

               <LinearLayout
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:orientation="horizontal"
                       android:layout_marginTop="@dimen/content_margin_top">

                   <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1">

                       <TextView
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/path"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_small"
                               android:textColor="@color/white_text" />

                       <TextView
                               android:id="@+id/wayTextView"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_xxlarge"
                               android:textColor="@color/white_text" />

                   </LinearLayout>

                   <LinearLayout
                           android:layout_width="match_parent"
                           android:layout_height="wrap_content"
                           android:orientation="vertical"
                           android:layout_weight="1">

                       <TextView
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:text="@string/platform"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_small"
                               android:textColor="@color/white_text" />

                       <TextView
                               android:id="@+id/platformTextView"
                               android:layout_width="match_parent"
                               android:layout_height="wrap_content"
                               android:textAlignment="center"
                               android:textSize="@dimen/text_size_xxlarge"
                               android:textColor="@color/white_text" />

                   </LinearLayout>

               </LinearLayout>

           </LinearLayout>

       </LinearLayout>

   </FrameLayout>

    <TextView
            android:id="@+id/emptyView"
            android:text="нет информации"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white_text" />

</FrameLayout>